SLING-12634: Resource Resolver: isMaxCachedVanityPathEntriesStartup check does not handle unlimited cache size (#135)
* SLING-12634: Resource Resolver: isMaxCachedVanityPathEntriesStartup check does not handle unlimited cache size

* Update src/test/java/org/apache/sling/resourceresolver/impl/mapping/VanityPathMapEntriesTest.java

Co-authored-by: Jörg Hoh <joerghoh@users.noreply.github.com>

---------

Co-authored-by: Jörg Hoh <joerghoh@users.noreply.github.com>